fix scaling on mobile device

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,9 @@ body {
     letter-spacing: 0.05em;
     background-color: #000000;
     color: #00ff00;
-    display: block; 
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
     min-height: 100vh;
     margin: 20px 0 0 0;
     overflow-x: hidden;
